k8s/service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  namespace: microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: <your-dockerhub-username>/service-a:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
